# Facial-Emotion-Recognition

./: CMakeLists.txt  README.md
exe/Image/: CMakeLists.txt  Image.cpp
exe/Video/: CMakeLists.txt  Video.cpp
output/images/: isk_det_0.pts
output/videos/: example1_1.txt
